This file documents the revision history for Perl extension Catalyst.

5.7007  ??
        - Don't ignore file uploads if form contains a text field with the same name.
          (Carl Franks)
        - Support restart_delay of 0 (for use in the POE engine).
        - Skip body processing if we don't have a Content-Length header.
          Results in about a 9% performance increase when handling GET/HEAD requests.
        - Add a default body to redirect responses.
        - MyApp->model/view now looks at MyApp->config->{default_view/model}
          (Bogdan Lucaciu)

5.7006   2006-11-03 14.18
        - Updated manifest
        - Fix Slurp dependency
        - Updated HTTP::Body dependency to 0.6, 0.5 can break on large POST requests.
        - Skip utf8 fix for undef values in uri_with() and uri_for()

5.7005   2006-11-07 19:37:35
        - Fixed lighttpd tests to be properly skipped.
        - Moved IE workarounds to exist only in the HTTP engine.
        - Added installation instructions (from Catalyst-Manual dist)

5.7004   2006-11-06 20:48:35
        - Fix Engine::HTTP crash when using IE. (Jesper Krogh, Peter Edwards)
        - clean up Catalyst::Utils to handle some edge cases
        - Properly work around lighttpd PATH_INFO vs. SCRIPT_NAME bug
          (Mark Blythe)
        - add _application accessor to Catalyst::Base
        - Support current_view
        - Allow use of Catalyst::Test without app name (Ton Voon, Altinity)
        - Catalyst::Manual moved to its own package
        - Add option to FastCGI engine to send errors to stdout, not the web server
        - Use Module::Install's auto_install to install prerequisite modules 
        - various documentation fixes and improvements
        
5.7003   2006-09-21 16:29:45
        - Additions and updates to tutorial

5.7002   2006-09-17 19:35:32
        - unescape captures to match args
        - fix for relative Chained under namespace '' (root)